--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,10 @@
             <version>6.2.1</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-authorization-server</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
             <version>2.4.4</version> <!-- Use the latest version available -->
